--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,12 +12,15 @@
 }
 
 .header {
-    display: flex;
-    height: 10%;
+    
     background-color: #2B2B2B;
     position: sticky;
     top: 0;
-    border-bottom: 1px solid #a8a8a8;
+}
+
+.navbar {
+    display: flex;
+    height: 10%;
 }
 
 .searchbar {
@@ -63,7 +66,7 @@
 .save-icon {
     background-color: transparent;
     border: none;
-    color: #4BA3C7;
+    color: #fff;
     font-size: 28px;
 }
 
@@ -86,11 +89,62 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: space-between;
+    margin-top: 1.5rem;
+    margin-left: 25px;
+    margin-right: 25px;
     }
 
 .books div {
-    flex: 0 1 calc(25% - 10px);
-    margin-bottom: 20px; 
+    flex: 0 1 calc(20% - 20px);
     text-align: center;   
     }
 
+.book {
+    padding: 1rem 0;
+    border: 1px solid #A8A8A8;
+    border-radius: 13px;
+    margin-bottom: 20px;
+}
+
+.booktitle {
+    font-size: 15px;
+    font-weight: 500;
+
+}
+
+
+
+.author {
+    font-size: 13px;
+    color: #FFD365;
+}
+
+.categories {
+    padding: 2rem;
+    border-bottom: 1px solid #a8a8a8;
+    display: flex;
+    gap: 130px;
+    margin: 0;
+    position: sticky;
+    top: 87px;
+    background-color: #2B2B2B;
+}
+
+.category-button {
+    margin-left: 25px;
+}
+
+.categories button {
+    background-color: transparent;
+    border: none;
+    color: #A8A8A8;
+}
+
+.categories button:hover {
+    color: #fff;
+}
+
+.loading {
+    font-size: 60px;
+    margin-right: 40%;
+}
